# Jiffie

./: .editorconfig  .gitignore  CMakeLists.txt  FileListModel.cpp  FileListModel.hpp  Jiffie.cppcheck  Jiffie.qrc  Jiffie.rc  JiffieVersion.h  JunkFileFinder.cpp  JunkFileFinder.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ReadMe.md
.github/workflows/: cppcheck.yml
